2009-04-28  Marek Habersack  <mhabersack@novell.com>

	* AspGenerator.cs: ProcessTag doesn't process a tag which is not
	server-side and which has declarative expressions embedded. Fixes
	bug #498637

2009-04-24  Marek Habersack  <mhabersack@novell.com>

	* AspGenerator.cs: ProcessCode should _not_ stop processing the
	passed code string if the filter's ProcessCodeConstruct returns
	false. Fixes bug #497775

2009-04-21  Marek Habersack  <mhabersack@novell.com>

	* PageCompiler.cs: implemented new way of setting output cache
	parameters in the 2.0 profile. The generated code is now the same
	as on .NET and uses the OutputCacheParameters class to pass
	settings to InitOutputCache.

2009-04-17  Marek Habersack  <mhabersack@novell.com>

	* AspGenerator.cs: if thead/tbody are parsed as children of a
	server-side table control, ignore them. Fixes bug #481622

2009-04-16  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: using a regexp to check whether an
	expression is a Bind one. Fixes bug #493639
	AssignPropertyFromResources now checks whether the field/property
	passed to it is decorated with the Localizable custom attribute
	and whether the resource provider contains an entry for that
	property.

2009-04-15  Marek Habersack  <mhabersack@novell.com>

	* BuildManager.cs: do not add all assemblies in bin/ when serving
	a precompiled site. Fixes bug #493873
	When serving a precompiled site, check if the bin/ directory
	contains certain well-known assemblies and load them if present.

2009-04-07  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: GenerateExpressionFromString doesn't
	assume that the passed member is a property anymore. Fixes bug
	#492252

2009-04-06  Marek Habersack  <mhabersack@novell.com>

	* BuildManager.cs: make sure that precompiled is not null before
	using it in GetPrecompiledType.

2009-04-03  Marek Habersack  <mhabersack@novell.com>

	* AspParser.cs: local copy of checksum generated by the tokenizer